# Annatar

./: DEBUGGING_GUIDE.md  ECS_FOUNDATION_COMPLETE.md  ECS_INTEGRATION_COMPLETE.md  REFACTORING_PLAN.md  SESSION_SUMMARY.md  claude.md  dependencies.cmake  update_config.sh
config/: constants.toml  enemies.toml  player.toml  weapons.toml
src/: CMakeLists.txt  config.json  game.cc
src/ecs/: ecs.h  world.h
src/ecs/components/: components.h
src/ecs/config/: config_loader.cc  config_loader.h
src/ecs/factories/: entity_factory.cc  entity_factory.h
src/ecs/systems/: animation_system.h  background_system.h  bounds_system.h  collision_system.h  enemy_spawn_system.cc  enemy_spawn_system.h  health_system.h  input_system.h  lifetime_system.h  movement_input_system.h  movement_system.h  render_system.h  systems.h  weapon_system.h
src/game_states/: game_states.h
src/game_states/menu/: menu_state.cc
src/game_states/play/: ecs_play_state.cc  ecs_play_state.h
src/util/: math_utils.h  texture_atlas.cc
